--- a/scripts/t6.config
+++ b/scripts/t6.config
@@ -3085,17 +3085,17 @@ CONFIG_PACKAGE_kmod-dm-raid=m
 CONFIG_PACKAGE_kmod-iosched-bfq=m
 CONFIG_PACKAGE_kmod-iscsi-initiator=m
 CONFIG_PACKAGE_kmod-loop=m
-CONFIG_PACKAGE_kmod-md-mod=m
-CONFIG_PACKAGE_kmod-md-linear=m
+CONFIG_PACKAGE_kmod-md-mod=y
+CONFIG_PACKAGE_kmod-md-linear=y
 CONFIG_PACKAGE_kmod-md-multipath=m
-CONFIG_PACKAGE_kmod-md-raid0=m
-CONFIG_PACKAGE_kmod-md-raid1=m
-CONFIG_PACKAGE_kmod-md-raid10=m
-CONFIG_PACKAGE_kmod-md-raid456=m
+CONFIG_PACKAGE_kmod-md-raid0=y
+CONFIG_PACKAGE_kmod-md-raid1=y
+CONFIG_PACKAGE_kmod-md-raid10=y
+CONFIG_PACKAGE_kmod-md-raid456=y
 CONFIG_PACKAGE_kmod-nbd=m
 CONFIG_PACKAGE_kmod-nvme=m
 CONFIG_PACKAGE_kmod-scsi-cdrom=m
-CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-scsi-core=m
 CONFIG_PACKAGE_kmod-scsi-generic=m
 CONFIG_PACKAGE_kmod-scsi-tape=m
 # end of Block Devices
@@ -3194,7 +3194,7 @@ CONFIG_PACKAGE_kmod-fs-configfs=m
 CONFIG_PACKAGE_kmod-fs-cramfs=m
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-exportfs=m
-CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ext4=m
 CONFIG_PACKAGE_kmod-fs-f2fs=m
 CONFIG_PACKAGE_kmod-fs-fscache=m
 CONFIG_PACKAGE_kmod-fs-hfs=m
@@ -3396,7 +3396,7 @@ CONFIG_PACKAGE_kmod-lib-842=m
 CONFIG_PACKAGE_kmod-lib-cordic=m
 CONFIG_PACKAGE_kmod-lib-crc-ccitt=y
 CONFIG_PACKAGE_kmod-lib-crc-itu-t=m
-CONFIG_PACKAGE_kmod-lib-crc16=y
+CONFIG_PACKAGE_kmod-lib-crc16=m
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-lib-crc7=m
 CONFIG_PACKAGE_kmod-lib-crc8=m
@@ -3942,7 +3942,7 @@ CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-dwc2=m
 CONFIG_PACKAGE_kmod-usb-dwc2-pci=m
 CONFIG_PACKAGE_kmod-usb-dwc3=m
-CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-ehci=m
 CONFIG_PACKAGE_kmod-usb-gadget=m
 CONFIG_PACKAGE_kmod-usb-gadget-cdc-composite=m
 CONFIG_PACKAGE_kmod-usb-gadget-ehci-debug=m
@@ -4015,17 +4015,17 @@ CONFIG_PACKAGE_kmod-usb-serial-ti-usb=m
 CONFIG_PACKAGE_kmod-usb-serial-visor=m
 CONFIG_PACKAGE_kmod-usb-serial-wwan=m
 CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=m
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage=m
+CONFIG_PACKAGE_kmod-usb-storage-extras=m
 CONFIG_PACKAGE_kmod-usb-storage-uas=m
 CONFIG_PACKAGE_kmod-usb-test=m
 CONFIG_PACKAGE_kmod-usb-uhci=m
 CONFIG_PACKAGE_kmod-usb-wdm=y
-CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
+CONFIG_PACKAGE_kmod-usb-xhci-hcd=m
 CONFIG_PACKAGE_kmod-usb-yealink=m
-CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2=m
 CONFIG_PACKAGE_kmod-usb2-pci=m
-CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_kmod-usb3=m
 CONFIG_PACKAGE_kmod-usbip=m
 CONFIG_PACKAGE_kmod-usbip-client=m
 CONFIG_PACKAGE_kmod-usbip-server=m
@@ -5918,7 +5918,7 @@ CONFIG_PACKAGE_libopcodes=m
 CONFIG_PACKAGE_libpam=y
 CONFIG_PACKAGE_libparted=y
 # CONFIG_PACKAGE_libpbc is not set
-CONFIG_PACKAGE_libpcap=m
+CONFIG_PACKAGE_libpcap=y
 
 #
 # Configuration
@@ -6200,7 +6200,7 @@ CONFIG_PACKAGE_luci-mod-system=y
 # 3. Applications
 #
 # CONFIG_PACKAGE_luci-app-acl is not set
-# CONFIG_PACKAGE_luci-app-acme is not set
+CONFIG_PACKAGE_luci-app-acme=y
 # CONFIG_PACKAGE_luci-app-adblock is not set
 # CONFIG_PACKAGE_luci-app-adblock-fast is not set
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
@@ -6228,7 +6228,9 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_ntfs_3g_utils=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm is not set
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linears=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
 # CONFIG_PACKAGE_luci-app-dynapoint is not set
@@ -6326,7 +6328,7 @@ CONFIG_PACKAGE_luci-app-statistics=y
 # CONFIG_PACKAGE_luci-app-travelmate is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-udpxy is not set
-# CONFIG_PACKAGE_luci-app-uhttpd is not set
+CONFIG_PACKAGE_luci-app-uhttpd=y
 # CONFIG_PACKAGE_luci-app-unbound is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_luci-app-usteer is not set
@@ -6397,6 +6399,41 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 # CONFIG_PACKAGE_luci-lib-uqr is not set
 # end of 6. Libraries
 
+# CONFIG_PACKAGE_luci-i18n-acme-ar is not set
+# CONFIG_PACKAGE_luci-i18n-acme-bg is not set
+# CONFIG_PACKAGE_luci-i18n-acme-bn is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ca is not set
+# CONFIG_PACKAGE_luci-i18n-acme-cs is not set
+# CONFIG_PACKAGE_luci-i18n-acme-da is not set
+# CONFIG_PACKAGE_luci-i18n-acme-de is not set
+# CONFIG_PACKAGE_luci-i18n-acme-el is not set
+# CONFIG_PACKAGE_luci-i18n-acme-es is not set
+# CONFIG_PACKAGE_luci-i18n-acme-fa is not set
+# CONFIG_PACKAGE_luci-i18n-acme-fi is not set
+# CONFIG_PACKAGE_luci-i18n-acme-fr is not set
+# CONFIG_PACKAGE_luci-i18n-acme-he is not set
+# CONFIG_PACKAGE_luci-i18n-acme-hi is not set
+# CONFIG_PACKAGE_luci-i18n-acme-hu is not set
+# CONFIG_PACKAGE_luci-i18n-acme-it is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ja is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ko is not set
+# CONFIG_PACKAGE_luci-i18n-acme-lt is not set
+# CONFIG_PACKAGE_luci-i18n-acme-mr is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ms is not set
+# CONFIG_PACKAGE_luci-i18n-acme-nl is not set
+# CONFIG_PACKAGE_luci-i18n-acme-no is not set
+# CONFIG_PACKAGE_luci-i18n-acme-pl is not set
+# CONFIG_PACKAGE_luci-i18n-acme-pt is not set
+# CONFIG_PACKAGE_luci-i18n-acme-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ro is not set
+# CONFIG_PACKAGE_luci-i18n-acme-ru is not set
+# CONFIG_PACKAGE_luci-i18n-acme-sk is not set
+# CONFIG_PACKAGE_luci-i18n-acme-sv is not set
+# CONFIG_PACKAGE_luci-i18n-acme-tr is not set
+# CONFIG_PACKAGE_luci-i18n-acme-uk is not set
+# CONFIG_PACKAGE_luci-i18n-acme-vi is not set
+CONFIG_PACKAGE_luci-i18n-acme-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-acme-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-base-ar is not set
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
 # CONFIG_PACKAGE_luci-i18n-base-bn is not set
@@ -6766,6 +6803,41 @@ CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ttyd-vi is not set
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ttyd-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ar is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-bg is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-bn is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ca is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-cs is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-da is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-de is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-el is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-es is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-fi is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-fr is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-he is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-hi is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-hu is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-it is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ja is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ko is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-lt is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-mr is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ms is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-nl is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-no is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-pl is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-pt is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ro is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-ru is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-sk is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-sv is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-tr is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-uk is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-vi is not set
+# CONFIG_PACKAGE_luci-i18n-uhttpd-yua is not set
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-uhttpd-zh-tw is not set
 # end of LuCI
 
 #
@@ -6911,7 +6983,7 @@ CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_rclone-config is not set
 # CONFIG_PACKAGE_rsync is not set
 # CONFIG_PACKAGE_rsyncd is not set
-# CONFIG_PACKAGE_vsftpd is not set
+CONFIG_PACKAGE_vsftpd=y
 # CONFIG_PACKAGE_vsftpd-tls is not set
 # CONFIG_PACKAGE_wget-nossl is not set
 CONFIG_PACKAGE_wget-ssl=y
@@ -7013,7 +7085,7 @@ CONFIG_PACKAGE_iptables-zz-legacy=m
 
 # CONFIG_PACKAGE_miniupnpc is not set
 # CONFIG_PACKAGE_miniupnpd-iptables is not set
-CONFIG_PACKAGE_miniupnpd-nftables=y
+# CONFIG_PACKAGE_miniupnpd-nftables is not set
 # CONFIG_PACKAGE_natpmpc is not set
 CONFIG_PACKAGE_nftables-json=y
 # CONFIG_PACKAGE_nftables-nojson is not set
@@ -7675,10 +7747,10 @@ CONFIG_PACKAGE_wpa-supplicant-openssl=y
 # CONFIG_PACKAGE_6to4 is not set
 # CONFIG_PACKAGE_UDPspeeder is not set
 # CONFIG_PACKAGE_aardvark-dns is not set
-# CONFIG_PACKAGE_acme is not set
-# CONFIG_PACKAGE_acme-acmesh is not set
-# CONFIG_PACKAGE_acme-acmesh-dnsapi is not set
-# CONFIG_PACKAGE_acme-common is not set
+CONFIG_PACKAGE_acme=y
+CONFIG_PACKAGE_acme-acmesh=y
+CONFIG_PACKAGE_acme-acmesh-dnsapi=y
+CONFIG_PACKAGE_acme-common=y
 # CONFIG_PACKAGE_adblock is not set
 # CONFIG_PACKAGE_adblock-fast is not set
 # CONFIG_PACKAGE_addrwatch is not set
@@ -7934,7 +8006,8 @@ CONFIG_PACKAGE_smartdns=y
 # CONFIG_PACKAGE_snowflake-probetest is not set
 # CONFIG_PACKAGE_snowflake-proxy is not set
 # CONFIG_PACKAGE_snowflake-server is not set
-# CONFIG_PACKAGE_socat is not set
+CONFIG_PACKAGE_socat=y
+# CONFIG_SOCAT_SSL is not set
 # CONFIG_PACKAGE_softflowd is not set
 # CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_speedtest-go is not set
@@ -7948,7 +8021,7 @@ CONFIG_PACKAGE_smartdns=y
 # CONFIG_PACKAGE_tac_plus is not set
 # CONFIG_PACKAGE_tac_plus-pam is not set
 # CONFIG_PACKAGE_tayga is not set
-# CONFIG_PACKAGE_tcpdump is not set
+CONFIG_PACKAGE_tcpdump=y
 # CONFIG_PACKAGE_tcpdump-mini is not set
 CONFIG_PACKAGE_tcping=y
 # CONFIG_PACKAGE_telnet-bsd is not set
@@ -8130,7 +8203,7 @@ CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_lsblk=y
 # CONFIG_PACKAGE_lvm2 is not set
 # CONFIG_PACKAGE_lvm2-selinux is not set
-# CONFIG_PACKAGE_mdadm is not set
+CONFIG_PACKAGE_mdadm=y
 # CONFIG_PACKAGE_mtools is not set
 # CONFIG_PACKAGE_nvme-cli is not set
 CONFIG_PACKAGE_parted=y
@@ -8281,7 +8354,7 @@ CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_klish is not set
 # CONFIG_PACKAGE_mksh is not set
 # CONFIG_PACKAGE_tcsh is not set
-# CONFIG_PACKAGE_zsh is not set
+CONFIG_PACKAGE_zsh=y
 # end of Shells
 
 #
